<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_common_page" >

    <LinearLayout
        android:id="@+id/rel_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_blue"
        android:orientation="vertical" >

        <View
            android:id="@+id/miui_top"
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:background="#0f00"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/title_blue" >

            <ImageView
                android:id="@+id/tv_back"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_alignParentLeft="true"
                android:contentDescription="@null"
                android:paddingRight="30dp"
                android:src="@drawable/icon_back" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="设置会议时间"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:paddingBottom="18dp"
                android:paddingTop="18dp"
                android:text="确定"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/rel_top"
        android:layout_marginTop="14dp"
        android:background="@color/divider_gray" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/rg_meeting_type"
        android:background="@color/divider_gray" />

    <RadioGroup
        android:id="@+id/rg_meeting_type"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/rel_top"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rb_inner_meeting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/meeting_bg_selector"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/meeting_smart_scope"
            android:textColor="@drawable/meeting_textcolor_selector"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_outer_meeting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/meeting_bg_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/meeting_own_scope"
            android:textColor="@drawable/meeting_textcolor_selector"
            android:textSize="16sp" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rg_meeting_type"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/meeting_hint"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_select"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_meeting_select"
            android:text="@string/meeting_to_select" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rg_meeting_type" >
    </FrameLayout>

</RelativeLayout>